added future directions and removed TaskGenX+CATS

--- a/References/references.bib
+++ b/References/references.bib
@@ -1178,6 +1178,23 @@ doi={10.1109/IPDPS.2016.49},
 ISSN={1530-2075}, 
 month={May},}
 
+@article{CFS,
+ author = {Pabla, Chandandeep Singh},
+ title = {Completely Fair Scheduler},
+ journal = {Linux J.},
+ issue_date = {August 2009},
+ volume = {2009},
+ number = {184},
+ month = aug,
+ year = {2009},
+ issn = {1075-3583},
+ articleno = {4},
+ url = {http://dl.acm.org/citation.cfm?id=1594371.1594375},
+ acmid = {1594375},
+ publisher = {Belltown Media},
+ address = {Houston, TX},
+} 
+
 @article{AMC_survey,
 author = {Mittal, Sparsh},
 year = {2016},
