--- a/TaskGenX/07-conclusions.tex
+++ b/TaskGenX/07-conclusions.tex
@@ -1,17 +1,17 @@
-This paper presented {\proposal}, the first software-hardware co-design that decouples task creation and accelerates it on a runtime optimized hardware.
-In contrast to previous studies, our paper makes the observation that task creation is a significant bottleneck in parallel runtimes.
+This chapter presented {\proposal}, the first software-hardware co-design that decouples task creation and accelerates it on a runtime optimized hardware.
+In contrast to previous studies, our study makes the observation that task creation is a significant bottleneck in parallel runtimes.
 Based on this we implemented {\proposal} on top of the OpenMP programming model.
 %Task creation overheads are notable especially in workloads with fine grained parallelism.
 %The more we increase the granularity and the number of cores, the more critical the task creation becomes.
-On the hardware side, our paper sets the requirements for the RTopt in order to achieve optimal results and proposes an asymmetric architecture that combines it with general purpose cores.
+On the hardware side, we set the requirements for the RTopt in order to achieve optimal results and proposed an asymmetric architecture that combines it with general purpose cores.
 
-Based on this analysis we evaluate the performance of 11 real workloads using our approach with TaskSim simulator.
+Based on this analysis we evaluated the performance of 11 real workloads using our approach with TaskSim simulator.
 Accelerating task creation, {\proposal} achieves up to 15.8$\times$ improvement (Cholesky128) over the baseline for homogeneous systems and up to 16$\times$ (Blackscholes) on asymmetric systems when the application is launched on a little core.
 %We showed that applications with fine grained parallelism are more prone to exhibit task creation overheads and {\proposal} manages to 
 %achieve higher improvements in these cases where task creation is more important.
 %7$\times$ on asymmetric systems when the application is launched on a little core.
 % 6$\times$ average improvement
-Using {\proposal} on asymmetric systems offers a portable solution, as the task creation is not affected by the type of core that the master thread is bound to. \kc{TODO: add conclusion for TaskGenX+CATS}
+Using {\proposal} on asymmetric systems offers a portable solution, as the task creation is not affected by the type of core that the master thread is bound to. 
 
 
 We further showed that for some cases like Canneal where task creation needs to be accelerated as much as 197$\times$ in order to steadily provide enough created tasks for execution.
