--- a/bigLittlePARSEC/01-introduction.tex
+++ b/bigLittlePARSEC/01-introduction.tex
@@ -39,10 +39,11 @@ We show why parallel applications are not ready to run on AMCs and how OS and ru
 Further we point out in which aspects the built-in OS scheduler falls short to effectively utilize the AMC.
 Finally, we show how the runtime system approach overcomes these issues, and improves the OS and static threading approaches by 13\% and 23\% respectively.
 
-The rest of this chapter is organized as follows: Section~\ref{sec:scheduling} provides information on 
-scheduling at the OS and runtime system levels while Section~\ref{sec:experimental} describes the experimental framework. 
-Section~\ref{sec:evaluation} shows the performance and energy results and associated insights.% of our experiments. 
-Finally, Section~\ref{sec:related} discusses related work and Section~\ref{sec:conclusions} concludes this work. 
+The rest of this chapter is organized as follows: Section~\ref{sec.study.scheduling} provides information on 
+scheduling at the OS and runtime system levels.
+% while Section~\ref{sec.study.experimental} describes the experimental framework. 
+Section~\ref{sec.study.evaluation} shows the performance and energy results and associated insights.% of our experiments. 
+Finally, Section~\ref{sec.study.conclusions} concludes this work. 
 
 \iffalse
 % <PACT16>
