--- a/bigLittlePARSEC/paperPARSEC.tex
+++ b/bigLittlePARSEC/paperPARSEC.tex
@@ -15,7 +15,7 @@ We compare scheduling approaches on the application, OS and runtime system level
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 \section{Scheduling in Asymmetric Multi-Cores}
-\label{sec:scheduling}
+\label{sec.study.scheduling}
 \input{bigLittlePARSEC/03-scheduling}
 
 %%%%%%%%%%%%%%%%%%%%
@@ -27,13 +27,13 @@ We compare scheduling approaches on the application, OS and runtime system level
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 \section{Evaluation}
-\label{sec:evaluation}
+\label{sec.study.evaluation}
 \input{bigLittlePARSEC/05-evaluation}
 
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
-\label{sec:conclusions}
+\label{sec.study.conclusions}
 \input{bigLittlePARSEC/07-conclusions}
 
 %\bibliographystyle{elsarticle-num} 
