--- a/scheduling/05-evaluation.tex
+++ b/scheduling/05-evaluation.tex
@@ -13,7 +13,7 @@
 		\includegraphics[width=0.6\textwidth]{images/cholesky_16_white.pdf}	
 		\label{cholesky16x16_TDG}
 	}
-	\label{cholesky_graphs}
+	\label{fig.cholesky_graphs}
 	\caption{Cholesky factorization task dependency graphs.}
 \end{figure}
 % For example, a multi-core chip with some in-order cores and some out-of-order cores. The evaluation part of this paper contains real machine evaluation as well as evaluation through simulation.
@@ -22,7 +22,7 @@
 %On the simulated platform we are able to set up different performance ratios between fast and slow cores without a restriction.
 
 In the first part of our real environment evaluation, we measure the execution time of four criticality-sensitive applications using CATS ad the default OmpSs scheduler. 
-We evaluate four different CATS configurations based on the options explained in Section~\ref{sec.cats} and provide a detailed comparison between them. 
+We evaluate four different CATS configurations based on the options explained in Section~\ref{sec.scheduling.cats} and provide a detailed comparison between them. 
 The options consist of whether the task submission policy is strict or flexible, and the type of the work stealing mechanism. 
 This results in the following configurations:
 \begin{itemize}
