--- a/thesis.tex
+++ b/thesis.tex
@@ -128,7 +128,7 @@
 \input{blankpage2}
 \include{Dedication/dedication}
 \include{Declaration/declaration}
-%\include{Acknowledgement/acknowledgement}
+\include{Acknowledgement/acknowledgement}
 \include{Abstract/abstract}
 \input{blankpage2}
 \input{advisors/advisors}
