--- a/TaskGenX/hw.tex
+++ b/TaskGenX/hw.tex
@@ -12,7 +12,7 @@ As described in the previous section, {\proposal} assumes the existence of speci
 The goal of this paper is not to propose a detailed micro-architecture of the specialized hardware; instead we sketch the high-level hardware requirements for the {\proposal} set-up, in the hope to be an insightful and useful influence for hardware designers.
 The SRT is bound to the task creation accelerator and executes the requests in the RRQ. 
 Previous studies have proposed custom accelerators for the runtime activity~\cite{TaskSS, Xubin, Nexus, Swarm, TMU, Carbon}. 
-These proposals significantly accelerate (up to three orders of magnitude) different bottlenecks of the runtime system\footnote{Section~\ref{sec:related} further describes these proposals.}. 
+These proposals significantly accelerate (up to three orders of magnitude) different bottlenecks of the runtime system\footnote{Chapter~\ref{chapter.related} further describes these proposals.}. 
 These special purpose designs can only execute runtime system activity.
 
 %\begin{figure}[t!]%
