--- a/bigLittlePARSEC/03-scheduling.tex
+++ b/bigLittlePARSEC/03-scheduling.tex
@@ -26,7 +26,7 @@ In the In-Kernel Switch (IKS) approach~\cite{IKS}, each little core is paired wi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Global Task Scheduling}
-
+\label{sec.study.scheduling.gts}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 The Global Task Scheduling (GTS)~\cite{samsung}
 %\footnote{Different implementations of GTS exist based on the same concepts. Samsung denotes its proprietary implementation \emph{Heterogeneous Multi-Processing}} 
